// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not show anything if there are no expenses 1`] = `
<div>
  <h3>
    Total of Expenses
  </h3>
  <div>
    No expenses to add up
  </div>
</div>
`;

exports[`should not show anything when given one expense 1`] = `
<div>
  <h3>
    Total of Expenses
  </h3>
  <div>
    <p>
      Viewing 
      1
       
      expense
       totalling 
      $1.23
    </p>
  </div>
</div>
`;

exports[`should show total of expenses when given multiple expenses 1`] = `
<div>
  <h3>
    Total of Expenses
  </h3>
  <div>
    <p>
      Viewing 
      10
       
      expenses
       totalling 
      $1,231.23
    </p>
  </div>
</div>
`;
